[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/Level.gd" type="Script" id=1]
[ext_resource path="res://game/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/Peron.tscn" type="PackedScene" id=3]

[sub_resource type="GDScript" id=1]

script/source = "extends Camera2D

const SPEED = 500

func _process(delta):
	if Input.is_key_pressed(KEY_LEFT):
		position.x -= round(SPEED * delta)
	elif Input.is_key_pressed(KEY_RIGHT):
		position.x += round(SPEED * delta)
"

[node name="Level" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Camera2D" type="Camera2D" parent="." index="0"]

editor/display_folded = true
anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = SubResource( 1 )
_sections_unfolded = [ "Smoothing" ]

[node name="ParallaxBackground" parent="Camera2D" index="0" instance=ExtResource( 2 )]

[node name="Peron" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( -160, 240 )
_sections_unfolded = [ "Transform" ]

[connection signal="arm_landed" from="Peron" to="." method="_on_Peron_arm_landed"]

[connection signal="fist_launched" from="Peron" to="." method="_on_Peron_fist_launched"]

[connection signal="started_walking" from="Peron" to="." method="_on_Peron_started_walking"]

[connection signal="stopped_walking" from="Peron" to="." method="_on_Peron_stopped_walking"]


